--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,18 +8,30 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <style>
+  .styled-image{
+    width: 50px;
+    height: auto;
+    margin-top: 10px;
+    display: inline-block;
+  }
   h1{
-    font-size:20px;
+    font-size: 30px;
     font-weight: 100;
     color: #5d5d5d;
     text-align: left;
     margin-top: 20px;
+    vertical-align:top;
+    display: inline-block;
   }
+
 </style>
 
 <main class="main">
   <div> 
+    <img src ="assets/images/postman.png"  alt = "Post Man" class="styled-image">
     <h1> Umail </h1>
+    
+
   </div>
 
 </main>
