created a simple front end for back end use

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,13 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<style>
-  .styled-image{
-    width: 50px;
-    height: auto;
-    margin-top: 10px;
-    display: inline-block;
-  }
-  h1{
-    font-size: 30px;
-    font-weight: 100;
-    color: #5d5d5d;
-    text-align: left;
-    margin-top: 20px;
-    vertical-align:top;
-    display: inline-block;
-  }
-
-</style>
-
 <main class="main">
-  <div> 
-    <img src ="assets/images/postman.png"  alt = "Post Man" class="styled-image">
-    <h1> Umail </h1>
+    <div class = "top-page-div"> 
+      <img src ="assets/images/postman.png"  alt = "Post Man" class="logo">
+      <h1 class="name"> Umail </h1>
+      <div class="login_button"> Login  </div> 
     
+    </div>
+    <div class ="emails">
 
-  </div>
+    </div>
 
 </main>
 
